--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
 	<section class="mw7 center">
 	<ul>
 		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="{{.Permalink}}">
+		<a class="db pv4 ph3 ph0-l no-underline black dim" href="{{.URL}}">
 		<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
 		<p>{{ .Summary }}</p>
 		</a>
