college hoop no viz

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>readme</title>
 </head>
-<body>
-	<div class="pa3 pa5-ns">
-	<p class="f5 lh-copy measure-wide">{{.Content}}</p>
+<body class = "bg-light-yellow">
+	{{ partial "header" . }}
+	<div class="bg-light-yellow mw7 center">
+		{{.Content}}
 	</div>
 </body>
 </html>
