--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,10 @@
 <nav class="pa3 pa4-ns">
-  <a class="link dim black b f2 lh-copy tc db mb3 mb4-ns" href="/" title="Home">readme</a>
-  <div class="tc pb3">
-    <a class="link dim gray f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer" title="About">link1</a>
-    <a class="link dim gray f6 f5-ns dib mr3" href="#" title="Store">link2</a>
-    <a class="link dim gray f6 f5-ns dib" href="#" title="Contact">link3</a>
-  </div>
+  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  <!--
+  <a class="link dim gray    f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer">GitHub</a>
+  <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="About">About</a>
+  <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="Store">Store</a>
+  <a class="link dim gray    f6 f5-ns dib" href="#" title="Contact">Contact</a>
+  -->
 </nav>
+
