--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>readme</title>
+	<title>Daniel's Notes</title>
 </head>
 <body class = "bg-light-yellow">
 	{{ partial "header" . }}
@@ -12,7 +12,7 @@
 	<section class="mw7 center">
 	<ul class="list pl0">
 		<a class="db f3 mb1 black dim" href="{{.URL}}">
-		<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
+			<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
 		</a>
 	</ul>
 	</section>
