--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>readme</title>
+	<title>Daniel's Notes</title>
 </head>
 <body class = "bg-light-yellow">
 	{{ partial "header" . }}
