--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <nav class="pa3 pa4-ns">
-  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
   <!--
   <a class="link dim gray    f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer">GitHub</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="About">About</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="Store">Store</a>
-  <a class="link dim gray    f6 f5-ns dib" href="#" title="Contact">Contact</a>
+  <a class="link dim gray    f6 f5-ns dib mr3" href="#">About</a>
+  <a class="link dim gray    f6 f5-ns dib mr3" href="#">Store</a>
+  <a class="link dim gray    f6 f5-ns dib" href="#">Contact</a>
   -->
 </nav>
 
