--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
 	{{range .Pages}}
 	<section class="mw7 center">
 	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="{{.URL}}">
+		<a class="db f3 mb1 dark-blue dim" href="{{.URL}}">
 			<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
 		</a>
 	</ul>
