--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,9 +10,9 @@
 	{{ partial "header" . }}
 	{{range .Pages}}
 	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 dim" href="{{.URL}}">
-			<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
+	<ul class="list pl0 ml0 center mw6 ba">
+		<a class="ph3 pv3 bb dim" href="{{.URL}}">
+			<h1 class="f4 bold center mw6">{{.Title}}</h1>
 		</a>
 	</ul>
 	</section>
