--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,8 +11,8 @@
 	{{range .Pages}}
 	<section class="mw7 center">
 	<ul class="list pl0 ml0 center mw6 ba">
-		<a class="ph3 pv3 bb dim" href="{{.URL}}">
-			<h1 class="f4 bold center mw6">{{.Title}}</h1>
+		<a class="ph3 pv3 dim" href="{{.URL}}">
+			<li class="ph3 pv3">{{.Title}}</li>
 		</a>
 	</ul>
 	</section>
