dont lose your head

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,2 +1,4 @@
-
+<nav class="pa3 pa4-n bl bw3">
+    <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
+  </nav>
 
